# netdumper

./: .gitignore  Cargo.toml  README.md  out.txt  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
crates/netdumper-cli/: Cargo.toml
crates/netdumper-cli/src/: assembly.rs  dac.rs  dump.rs  error.rs  external_dac.rs  inject.rs  main.rs  pe.rs  process.rs  reader.rs  runtime.rs  target.rs
crates/netdumper-payload/: Cargo.toml
crates/netdumper-payload/src/: clr.rs  clr_host.rs  context.rs  debug_target.rs  enumerate.rs  lib.rs  library_provider.rs
crates/netdumper-shared/: Cargo.toml
crates/netdumper-shared/src/: dac.rs  dac_enum.rs  ipc.rs  lib.rs  messages.rs  runtime.rs
target2/: .rustc_info.json
target2/release/.fingerprint/anstream-578abe2cb93ae44b/: lib-anstream  lib-anstream.json
target2/release/.fingerprint/anstyle-f9cb972d3f137b2c/: lib-anstyle  lib-anstyle.json
target2/release/.fingerprint/anstyle-parse-b69c46ed8dd89bb9/: lib-anstyle_parse  lib-anstyle_parse.json
target2/release/.fingerprint/anstyle-query-e69c0a500c8ba9a5/: lib-anstyle_query  lib-anstyle_query.json
target2/release/.fingerprint/anstyle-wincon-dae544c055b41784/: lib-anstyle_wincon  lib-anstyle_wincon.json
target2/release/.fingerprint/clap-23ff640eb481a959/: lib-clap  lib-clap.json
target2/release/.fingerprint/clap_builder-1901bac5d929116a/: lib-clap_builder  lib-clap_builder.json
target2/release/.fingerprint/clap_derive-c59ae1f749f12c4e/: lib-clap_derive  lib-clap_derive.json
target2/release/.fingerprint/clap_lex-99f755b7090f31b0/: lib-clap_lex  lib-clap_lex.json
target2/release/.fingerprint/colorchoice-c9e87995a61a390e/: lib-colorchoice  lib-colorchoice.json
target2/release/.fingerprint/dataview-879df0bb03bce9ce/: lib-dataview  lib-dataview.json
target2/release/.fingerprint/derive_pod-68e00568dae772f2/: lib-derive_pod  lib-derive_pod.json
target2/release/.fingerprint/heck-ee3f54ee4ec50f0e/: lib-heck  lib-heck.json
target2/release/.fingerprint/is_terminal_polyfill-99ba069023f9b028/: lib-is_terminal_polyfill  lib-is_terminal_polyfill.json
target2/release/.fingerprint/netdumper-cli-6a78dd00baf1f0ef/: dep-bin-netdumper-cli
target2/release/.fingerprint/netdumper-payload-8b72f57822b1c7eb/: dep-lib-netdumper_payload  lib-netdumper_payload  lib-netdumper_payload.json  output-lib-netdumper_payload
target2/release/.fingerprint/netdumper-shared-c48e19269d802301/: dep-lib-netdumper_shared  lib-netdumper_shared  lib-netdumper_shared.json
target2/release/.fingerprint/no-std-compat-e74a10ab1f2086b2/: lib-no_std_compat  lib-no_std_compat.json
target2/release/.fingerprint/once_cell_polyfill-8bc38fb18a7ba1e3/: lib-once_cell_polyfill  lib-once_cell_polyfill.json
target2/release/.fingerprint/pelite-1162358d5db935eb/: lib-pelite  lib-pelite.json
target2/release/.fingerprint/pelite-macros-681ff9410538df9d/: lib-pelite_macros  lib-pelite_macros.json
testapp/: Program.cs
(+60 files in other folders)
