[package]
name = "netdumper"
version.workspace = true
edition.workspace = true

[[bin]]
name = "netdumper"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
sha1 = "0.10.6"
thiserror = "2"
ureq = "3.2.0"

[target.'cfg(windows)'.dependencies]
mscoree = { git = "https://github.com/coconutbird/mscoree-rs.git" }
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
]}
windows-core = "0.61"

