[package]
name = "netdumper-payload"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
netdumper-shared = { workspace = true }
pelite = "0.10"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Variant",
]}

[build-dependencies]
windows-bindgen = "0.61"

