[package]
name = "netdumper-shared"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror = "2"

[target.'cfg(windows)'.dependencies]
# mscoree provides DAC interfaces (ISOSDacInterface, IXCLRDataProcess, ICLRDataTarget, etc.)
mscoree = { git = "https://github.com/coconutbird/mscoree-rs.git" }
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
]}
# Separate crates for procedural macros and core types
windows-core = "0.61"
